yamls/ocp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grocery-list-service
    version: v1
  name: grocery-list-service
spec:
  selector:
    matchLabels:
      app: grocery-list-service
      version: v1
  template:
    metadata:
      labels:
        app: grocery-list-service
        version: v1
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/tekton-argocd-sen/app:16fc615
        imagePullPolicy: Always
        name: grocery-list-service
        ports:
        - containerPort: 8080
