yamls/ocp/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grocery-list-service
  name: grocery-list-service
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: grocery-list-service
