yamls/ocp/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: grocery-list-service
  name: grocery-list-service
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: grocery-list-service
    weight: 100
